--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 03:05:02 2018</p>
+         Last Run: Sat Dec  1 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>56</td>
-                        <td>82</td>
+                        <td>58</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
@@ -43,10 +43,10 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>56</td>
-                        <td>79</td>
+                        <td>-3</td>
+                        <td>-8</td>
+                        <td>55</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
@@ -57,8 +57,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>58</td>
-                        <td>81</td>
+                        <td>61</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-7",
-                 "-6",
+                 "-8",
                  "-8"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-2",
+                 "-3",
                  "-3"
                ]
              }
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "56",
-                 "56",
-                 "58"
+                 "58",
+                 "55",
+                 "61"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "79",
-                 "81"
+                 "81",
+                 "78",
+                 "80"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 03:05:02 2018</p>
+         Last Run: Sat Dec  1 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,19 +248,19 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>35</td>
+                        <td>31</td>
                         <td>82</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>95</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>24</td>
+                        <td>20</td>
                         <td>77</td>
                         <td>0</td>
                         <td>14</td>
@@ -272,12 +272,12 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>20</td>
+                        <td>15</td>
                         <td>73</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>93</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "35",
-                 "24",
-                 "20"
+                 "31",
+                 "20",
+                 "15"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "95",
+                 "92",
                  "94",
-                 "93"
+                 "92"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 03:05:02 2018</p>
+         Last Run: Sat Dec  1 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,11 +464,11 @@
                         <td>-11</td>
                         <td>-11</td>
                         <td>7</td>
-                        <td>83</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>5</td>
                         <td>SW</td>
-                        <td>30</td>
+                        <td>32</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -476,11 +476,11 @@
                         <td>-12</td>
                         <td>-16</td>
                         <td>7</td>
-                        <td>84</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>SW</td>
-                        <td>23</td>
+                        <td>WSW</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-12</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>86</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>17</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "84",
-                 "86"
+                 "85",
+                 "86",
+                 "88"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "23",
-                 "17"
+                 "32",
+                 "25",
+                 "19"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 03:05:02 2018</p>
+         Last Run: Sat Dec  1 04:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,7 +679,7 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>6</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
+                 "79",
                  "80",
                  "85"
                ]
