--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 04:05:02 2018</p>
+         Last Run: Sat Dec  1 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>58</td>
-                        <td>81</td>
+                        <td>56</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
@@ -45,8 +45,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>55</td>
-                        <td>78</td>
+                        <td>57</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
@@ -57,7 +57,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>61</td>
+                        <td>64</td>
                         <td>80</td>
                         <td>0</td>
                         <td>13</td>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "58",
-                 "55",
-                 "61"
+                 "56",
+                 "57",
+                 "64"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "78",
+                 "80",
+                 "79",
                  "80"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 04:05:02 2018</p>
+         Last Run: Sat Dec  1 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -245,23 +245,23 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>31</td>
-                        <td>82</td>
+                        <td>24</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>92</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>20</td>
-                        <td>77</td>
+                        <td>18</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -273,7 +273,7 @@
                         <td>-3</td>
                         <td>-8</td>
                         <td>15</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -375,8 +375,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "31",
-                 "20",
+                 "24",
+                 "18",
                  "15"
                ]
              },
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "77",
-                 "73"
+                 "81",
+                 "76",
+                 "72"
                ]
              },
              {
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "92",
+                 "94",
                  "94",
                  "92"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 04:05:02 2018</p>
+         Last Run: Sat Dec  1 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,27 +460,27 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-11</td>
                         <td>-11</td>
-                        <td>7</td>
-                        <td>85</td>
+                        <td>6</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>5</td>
-                        <td>SW</td>
-                        <td>32</td>
+                        <td>WSW</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-12</td>
                         <td>-16</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>86</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>25</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -488,11 +488,11 @@
                         <td>-12</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>88</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>19</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,8 +590,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
+                 "6",
+                 "6",
                  "6"
                ]
              },
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
+                 "84",
                  "86",
-                 "88"
+                 "87"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "32",
-                 "25",
-                 "19"
+                 "19",
+                 "12",
+                 "8"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 04:05:02 2018</p>
+         Last Run: Sat Dec  1 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,10 +679,10 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>6</td>
-                        <td>79</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SSW</td>
+                        <td>SW</td>
                         <td>3</td>
                      </tr>
                      <tr>
@@ -694,7 +694,7 @@
                         <td>80</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SSW</td>
+                        <td>SW</td>
                         <td>2</td>
                      </tr>
                      <tr>
@@ -703,11 +703,11 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>6</td>
-                        <td>85</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>2</td>
+                        <td>1</td>
                      </tr>
                   </tbody>
                </table>
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
+                 "78",
                  "80",
-                 "85"
+                 "84"
                ]
              },
              {
@@ -829,7 +829,7 @@
                "data":[
                  "3",
                  "2",
-                 "2"
+                 "1"
                ]
              }
            ]
