--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 05:05:02 2018</p>
+         Last Run: Sat Dec  1 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>56</td>
-                        <td>80</td>
+                        <td>50</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>11</td>
                         <td>N</td>
@@ -45,8 +45,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>57</td>
-                        <td>79</td>
+                        <td>59</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
@@ -58,7 +58,7 @@
                         <td>-3</td>
                         <td>-8</td>
                         <td>64</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>13</td>
                         <td>N</td>
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "56",
-                 "57",
+                 "50",
+                 "59",
                  "64"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "79",
-                 "80"
+                 "81",
+                 "78",
+                 "81"
                ]
              },
              {
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 05:05:02 2018</p>
+         Last Run: Sat Dec  1 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-4</td>
                         <td>-9</td>
                         <td>24</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -261,7 +261,7 @@
                         <td>-4</td>
                         <td>-9</td>
                         <td>18</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -273,9 +273,9 @@
                         <td>-3</td>
                         <td>-8</td>
                         <td>15</td>
-                        <td>72</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NNW</td>
                         <td>92</td>
                      </tr>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "76",
-                 "72"
+                 "82",
+                 "77",
+                 "73"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 05:05:02 2018</p>
+         Last Run: Sat Dec  1 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,11 +464,11 @@
                         <td>-11</td>
                         <td>-11</td>
                         <td>6</td>
-                        <td>84</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>5</td>
                         <td>WSW</td>
-                        <td>19</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -476,7 +476,7 @@
                         <td>-12</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>86</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -488,10 +488,10 @@
                         <td>-12</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>87</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>8</td>
                      </tr>
                   </tbody>
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
-                 "86",
-                 "87"
+                 "83",
+                 "85",
+                 "88"
                ]
              },
              {
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
+                 "18",
                  "12",
                  "8"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 05:05:02 2018</p>
+         Last Run: Sat Dec  1 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,14 +676,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-13</td>
-                        <td>-18</td>
-                        <td>6</td>
-                        <td>78</td>
+                        <td>-14</td>
+                        <td>-19</td>
+                        <td>5</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>3</td>
+                        <td>SSW</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -691,11 +691,11 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>6</td>
-                        <td>80</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>2</td>
+                        <td>SSW</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,7 +703,7 @@
                         <td>-14</td>
                         <td>-19</td>
                         <td>6</td>
-                        <td>84</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-18",
+                 "-19",
                  "-19",
                  "-19"
                ]
@@ -746,7 +746,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-13",
+                 "-14",
                  "-14",
                  "-14"
                ]
@@ -805,7 +805,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
+                 "5",
                  "6",
                  "6"
                ]
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "80",
-                 "84"
+                 "79",
+                 "81",
+                 "85"
                ]
              },
              {
@@ -827,8 +827,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "3",
                  "2",
+                 "1",
                  "1"
                ]
              }
